[package]
name = "heisspunk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "heisspunk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
anyhow = "1.0.102"
xdg = "3.0.0"
nix = { version = "0.31.3", features = ["signal", "process"] }
libc = "0.2.186"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
